{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "323de9c5-829b-4c89-b4a9-970aaf7686ac",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "27cb9485-1cf9-4954-beb2-0ff8396ae73f",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeMode",
                    "type": "Button",
                    "id": "a8bd1702-7fd6-4f0c-bee0-7a73061bf266",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "865f18ac-b85a-4035-9d01-dda422fd2101",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "789c0ea8-247a-4814-bad4-0345f81a2558",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}